--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,3 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
-
-[project]
-name = "imath_requests"
-authors = [{name = "Industrial 3D Robotics", email = "bknight@i3drobotics.com"}]
-readme = "README.md"
-license = {file = "LICENSE"}
-classifiers = ["License :: OSI Approved :: MIT License"]
-dynamic = ["version", "description"]
-
-[project.urls]
-Home = "https://github.com/i3drobotics/imath-requests"
+requires = ["setuptools>=46.4.0", "wheel"]
+build-backend = "setuptools.build_meta"
