--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,5 @@ include pyproject.toml
 include *.md
 include LICENSE
 recursive-include tests test*.py
+include versioneer.py
+include src/imath_requests/_version.py
