--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,10 @@
 [metadata]
-version = attr: imath_requests.__version__
 license_files = LICENSE
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = src/imath_requests/_version.py
+versionfile_build = src/imath_requests/_version.py
+tag_prefix =
+parentdir_prefix =
