add major/minor/patch deployment workflow

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = imath_requests
-version = file: VERSION
+version = file: version.template
 license_files = LICENSE
 [options]
 include_package_data = True
