--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,6 +67,8 @@ jobs:
       - name: Get linked issues
         uses: kin/gh-action-get-linked-issues@v1.0
         id: linked-issues
+        with:
+          access-token: "{{ secrets.GITHUB_TOKEN }}"
       - name: Write issues to file
         run: echo "${{ steps.linked-issues.outputs.issues }}" > issues.md
       - name: Create release body
