--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,14 +71,14 @@ jobs:
           python setup.py sdist bdist_wheel
           twine upload --repository pypi dist/*
       # Create release body
-      - name: Get linked issues
-        id: linked-issues
-        uses: hossainemruz/linked-issues@main
-        with:
-          pr_url: ${{ github.event.pull_request.html_url }}
-          format: IssueURL
-      - name: Write issues to file
-        run: echo "${{ steps.linked-issues.outputs.issues }}" > issues.md
+      # - name: Get linked issues
+      #   id: linked-issues
+      #   uses: hossainemruz/linked-issues@main
+      #   with:
+      #     pr_url: ${{ github.event.pull_request.html_url }}
+      #     format: IssueURL
+      # - name: Write issues to file
+      #   run: echo "${{ steps.linked-issues.outputs.issues }}" > issues.md
       - name: Create release body
         run: ./scripts/create_release_body.sh
       # Create GitHub release
