--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include pyproject.toml
-include *.md
+include release.md
 include version.template
 include LICENSE
 recursive-include tests test*.py
