--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install setuptools wheel twine
       # Get git variables
       - name: Get commit variables
         id: commit-vars
@@ -66,13 +66,6 @@ jobs:
       # Build
       - name: Build
         run: python setup.py sdist bdist_wheel
-      # Generate docs using Sphinx
-      - name: Docs
-        run: |
-          sudo apt-get install python3-sphinx
-          python -m pip install dist/*.whl
-          cd docs/sphinx
-          make html
       # Publish to pip
       - name: Build
         env:
@@ -88,6 +81,20 @@ jobs:
           tag_name: ${{ steps.bump-version.outputs.new_version }}
           files: |
             dist/*
+      # Generate docs using Sphinx
+      - name: Docs
+        run: |
+          sudo apt-get install python3-sphinx
+          python -m pip install sphinx sphinx-rtd-theme
+          python -m pip install dist/*.whl
+          cd docs/sphinx
+          make html
+      # Deploy docs
+      - name: Deploy docs
+        uses: JamesIves/github-pages-deploy-action@4.1.7
+        with:
+          branch: docs
+          folder: docs/static
       # Merge branch into production
       - name: Merge main -> prod
         uses: devmasx/merge-branch@master
