--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,7 +94,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.7
         with:
           branch: docs
-          folder: docs/static
+          folder: docs/static/html
       # Merge branch into production
       - name: Merge main -> prod
         uses: devmasx/merge-branch@master
