add nojekyll file for github pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,6 +86,7 @@ jobs:
         run: |
           sudo apt-get install python3-sphinx
           python -m pip install sphinx sphinx-rtd-theme
+          python -m pip install dist/*.whl
           cd docs
           make html
       # Deploy docs
