--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -18,8 +18,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
-      - name: Install Tox and any other packages
+      - name: Install Tox
         run: pip install tox
+      # Build & Test module with Tox
       - name: Run Tox
-        # Run tox using the version of Python in `PATH`
         run: tox -e py
