--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,6 @@ deps =
     check-manifest >= 0.42
     pytest
 commands =
-    check-manifest --ignore 'tox.ini,tests/**,.editorconfig,vscode.env,.vscode/**,docs/**,examples/**'
+    check-manifest --ignore 'tox.ini,tests/**,.editorconfig,vscode.env,.vscode/**,docs/**,examples/**,*.yml'
     python setup.py check -m -s
     pytest tests {posargs}
