--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,15 +17,27 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     steps:
+      # Wait on other deployments to avoid collisions
+      - name: Turnstyle
+        uses: softprops/turnstyle@v1
+        with:
+          # bail on running deployment if waiting for more than 2 minute
+          abort-after-seconds: 120
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+      # Checkout code
       - uses: actions/checkout@v2
+      # Setup python
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: "3.x"
+      # Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine
+          pip install setuptools wheel twine sphinx sphinx-rtd-theme
+          sudo apt-get install python3-sphinx
       # Get git variables
       - name: Get commit variables
         id: commit-vars
@@ -71,7 +83,7 @@ jobs:
       - name: Build
         run: python setup.py sdist bdist_wheel
       # Publish to pip
-      - name: Build
+      - name: Publish pip
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
@@ -88,8 +100,6 @@ jobs:
       # Generate docs using Sphinx
       - name: Docs
         run: |
-          sudo apt-get install python3-sphinx
-          python -m pip install sphinx sphinx-rtd-theme
           python -m pip install dist/*.whl
           cd docs
           make html
