--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,32 +1,20 @@
-name: Deployment
+name: Release
 
-# Only trigger on main branch pull request close events
-# used to deploy code after merging
-# Versioning is automatically generated when merging, this is created by detecting the branch prefix:
-# - 'major' prefix for major release (e.g. N.x.x)
-# - 'minor' or 'feature' prefix for minor release (e.g. x.N.x)
-# - 'patch' or 'bugfix' prefix for patch release (e.g. x.x.N)
-# - no prefix for prepatch release (e.g. x.x.x-N)
 on:
-  pull_request:
-    branches: [ main ]
-    types: [ closed ]
+  workflow_dispatch:
+    inputs:
+        level:
+          type: choice
+          description: Release type
+          options: 
+          - patch
+          - minor
+          - major
 
 jobs:
   deploy:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    environment: production
     steps:
-      # Wait on other deployments to avoid collisions
-      - name: Turnstyle
-        uses: vigneshmsft/turnstyle@initial-wait-seconds
-        with:
-          # bail on running immediately if busy
-          abort-after-seconds: 1
-          poll-interval-seconds: 1
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
       # Checkout code
       - uses: actions/checkout@v2
       # Setup python
@@ -40,42 +28,19 @@ jobs:
           pip install --upgrade pip
           pip install setuptools wheel twine sphinx sphinx-rtd-theme
           sudo apt-get install python3-sphinx
-      # Get git variables
-      - name: Get commit variables
-        id: commit-vars
-        shell: bash
-        run: |
-          echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       # Get latest released version
       - uses: oprypin/find-latest-tag@v1
         with:
           repository: i3drobotics/imath-requests  # The repository to scan.
           releases-only: true  # All relevant tags have a GitHub release for them.
         id: latest-tag  # The step ID to refer to later.
-      # Get release type
-      - name: Set default release type # Set default to prepatch if no prefix is recognised
-        shell: bash
-        run: echo "RELEASE_TYPE=prepatch" >> $GITHUB_ENV
-      - name: Release type is major # If contains prefix major/xxx
-        if: startsWith( github.head_ref, 'major')
-        shell: bash
-        run: echo "RELEASE_TYPE=major" >> $GITHUB_ENV
-      - name: Release type is minor # If contains prefix minor/xxx or feature/xxx
-        if: ${{ startsWith( github.head_ref, 'minor') || startsWith( github.head_ref, 'feature') }}
-        shell: bash
-        run: echo "RELEASE_TYPE=minor" >> $GITHUB_ENV
-      - name: Release type is patch # If contains prefix patch/xxx, bugfix/xxx
-        if: ${{ startsWith( github.head_ref, 'patch') || startsWith( github.head_ref, 'bugfix') }}
-        shell: bash
-        run: echo "RELEASE_TYPE=patch" >> $GITHUB_ENV
       # Generate new release version
       - name: Generate new version
         uses: actions-ecosystem/action-bump-semver@v1
         id: bump-version
         with:
           current_version: ${{ steps.latest-tag.outputs.tag }}
-          level: ${{ env.RELEASE_TYPE }}
+          level: ${{ github.event.inputs.level }}
       # Add generated version to VERSION file
       - name: Add to Version file
         shell: bash
@@ -111,6 +76,13 @@ jobs:
         with:
           branch: docs
           folder: docs/_build/html
+      # Get git variables
+      - name: Get commit variables
+        id: commit-vars
+        shell: bash
+        run: |
+          echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       # Merge branch into production
       - name: Merge main -> prod
         uses: devmasx/merge-branch@master
