--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.x"
-      # Install dependencies
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install setuptools wheel twine sphinx sphinx-rtd-theme
-          sudo apt-get install python3-sphinx
-      # Build
-      - name: Build
-        run: python setup.py sdist bdist_wheel
+     - name: Install Tox
+        run: pip install tox
+      # Build & Test module with Tox
+      - name: Run Tox
+        run: tox -e py
